--- a/WCSTrainer/Pages/Shared/_Sidebar.cshtml
+++ b/WCSTrainer/Pages/Shared/_Sidebar.cshtml
@@ -11,6 +11,7 @@
       ("Locations", "Locations", "2"),
       ("Employees", "Employees", "3"),
       ("Accounts", "User Accounts", "3"),
+      ("FileExplorer", "File Explorer", "3"),
    };
 }
 
