--- a/WCSTrainer/Pages/Lessons/Create.cshtml
+++ b/WCSTrainer/Pages/Lessons/Create.cshtml
@@ -43,7 +43,7 @@
                               <textarea class="desc-content" name="ImageCaptions" placeholder="Type lesson description here."></textarea>
                            </div>
                            <div class="description-row">
-                              <label class="control-label">Upload Image (Optional)</label>
+                              <label class="control-label">Upload File</label>
                               <input type="file" name="ImageUploads" accept=".jpg,.jpeg,.png,.gif" class="form-control-file" />
                               <button type="button" class="btn remove-section-btn bg-btn btnRed">Remove Section</button>
                            </div>
