--- a/WCSTrainer/Pages/Lessons/Details.cshtml
+++ b/WCSTrainer/Pages/Lessons/Details.cshtml
@@ -8,23 +8,18 @@
 @using System.Text.RegularExpressions
 
 @functions {
-   public string ConvertContent(string content)
-   {
+   public string ConvertContent(string content) {
       var urlRegex = new Regex(@"(http|https)://[^\s]+|[a-zA-Z]:\\[^\s]+");
-      return urlRegex.Replace(content, match =>
-      {
+      return urlRegex.Replace(content, match => {
          var url = match.Value;
 
-         if (url.Contains("youtube.com/watch?v=") || url.Contains("youtu.be/"))
-         {
+         if (url.Contains("youtube.com/watch?v=") || url.Contains("youtu.be/")) {
             var videoId = ExtractYouTubeId(url);
-            if (videoId != null)
-            {
+            if (videoId != null) {
                return $"<iframe class=\"description-video\" src=\"https://www.youtube.com/embed/{videoId}\" frameborder=\"0\" allowfullscreen></iframe>";
             }
          }
-         else if (Regex.IsMatch(url, @"[a-zA-Z]:\\"))
-         {
+         else if (Regex.IsMatch(url, @"[a-zA-Z]:\\")) {
             var webPath = ConvertToWebPath(url);
             return $"<iframe class=\"description-file\" src=\"{webPath}\" frameborder=\"0\" width=\"100%\" height=\"500\"></iframe>";
          }
@@ -33,14 +28,12 @@
       });
    }
 
-   private string ConvertToWebPath(string filePath)
-   {
+   private string ConvertToWebPath(string filePath) {
       var relativePath = filePath.Replace("\\", "/").Replace("H:/", "/Shared/");
       return relativePath;
    }
 
-   private string ExtractYouTubeId(string url)
-   {
+   private string ExtractYouTubeId(string url) {
       var youtubeIdRegex = new Regex(@"(?:https?:\/\/)?(?:www\.)?(?:youtube\.com\/watch\?v=|youtu\.be\/)([a-zA-Z0-9_-]{11})");
       var match = youtubeIdRegex.Match(url);
       return match.Success ? match.Groups[1].Value : null;
@@ -64,8 +57,7 @@
                <div class="text-group">
                   <p class="title">Description</p>
                   <div class="info">
-                     @if (Model.Lesson.Descriptions.Any())
-                     {
+                     @if (Model.Lesson.Descriptions.Any()) {
                         @foreach (var description in Model.Lesson.Descriptions.Reverse())
                         {
                            if (description != null)
@@ -74,9 +66,9 @@
                               {
                                  <pre class="description-container">@Html.Raw(ConvertContent(description.TextContent))</pre>
                               }
-                              @if (description.ImageUpload != null)
+                              @if (description.FileUpload != null)
                               {
-                                 <img src="~/@description.ImageUpload.FilePath" alt="[Could not load image.]" />
+                                 <img src="~/@description.FileUpload.FilePath" alt="[Could not load image.]" />
                               }
                            }
                         }
