--- a/WCSTrainer/Pages/Locations/CreateCategory.cshtml
+++ b/WCSTrainer/Pages/Locations/CreateCategory.cshtml
@@ -1,12 +1,11 @@
 ﻿@page
-@model WCSTrainer.Pages.Locations.CreateModel
-
+@model WCSTrainer.Pages.Locations.CreateCategoryModel
 <div class="panel">
    <div class="body">
       <partial name="_Sidebar" />
       <div class="properties">
          <div class="user-form">
-            <p class="title">Create New Location</p>
+            <p class="title">Create Location Category</p>
             <p class="description">Fill out each required field.</p>
             <div class="field-container">
                <form method="post">
@@ -14,17 +13,10 @@
                   <div class="form-group">
                      <div class="form">
                         <div class="labels">
-                           <label asp-for="Location.Name" class="control-label"></label>
-                           <span asp-validation-for="Location.Name" class="text-danger"></span>
+                           <label asp-for="LocationCategory.Name" class="control-label"></label>
+                           <span asp-validation-for="LocationCategory.Name" class="text-danger"></span>
                         </div>
-                        <input asp-for="Location.Name" class="form-control" />
-                     </div>
-                     <div class="form">
-                        <div class="labels">
-                           <label class="control-label">Lesson Category</label>
-                           <span asp-validation-for="Location.CategoryId" class="text-danger"></span>
-                        </div>
-                        <select asp-for="Location.CategoryId" class="form-drop2" asp-items="@Model.CategorySelectList"></select>
+                        <input asp-for="LocationCategory.Name" class="form-control" />
                      </div>
                   </div>
                   <div class="form-group">
