--- a/WCSTrainer/Pages/TrainerGroups/Index.cshtml
+++ b/WCSTrainer/Pages/TrainerGroups/Index.cshtml
@@ -22,7 +22,7 @@
             <div class="tools">
                <p class="title">Options:</p>
                <div class="search">
-                  <input class="search-box" id="searchInput" placeholder="Search Skills" type="search" oninput="update(this)" />
+                  <input class="search-box" id="searchInput" placeholder="Search Groups" type="search" oninput="update(this)" />
                </div>
                <div class="btns">
                   <a asp-page="Create" class="btn nbg-btn btnMenu">Create Group</a>
