--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -393,7 +393,7 @@ nav {
 						padding-left: 15px;
 						color: var(--textSub1);
 						font-size: 16px;
-						min-width: 250px;
+						width: 170px;
 						flex-grow: 1;
 					}
 
@@ -1573,6 +1573,8 @@ nav {
 		background-color: var(--gray2);
 		border-radius: 3px;
 		border-left: 3px solid var(--gray5);
+      display: flex;
+      flex-direction: column;
 	}
 
 		.category-container .category .category-title {
