--- a/WCSTrainer/Pages/Locations/Index.cshtml
+++ b/WCSTrainer/Pages/Locations/Index.cshtml
@@ -42,6 +42,7 @@
                <div class="btns">
                   <a asp-page="Create" class="btn nbg-btn btnMenu">Create Location</a>
                   <a asp-page="CreateCategory" class="btn nbg-btn btnMenu">Create Category</a>
+                  <a href="file:///H:/Shared/Videos/Forklift/Forklift%20Operating%20Training/story.html" class="btn nbg-btn btnMenu">Create Category</a>
                </div>
             </div>
          </div>
