--- a/WCSTrainer/Pages/Lessons/Details.cshtml
+++ b/WCSTrainer/Pages/Lessons/Details.cshtml
@@ -8,37 +8,58 @@
 @using System.Text.RegularExpressions
 
 @functions {
-   public string ConvertContent(string content) {
+   public string ConvertContent(string content)
+   {
       var urlRegex = new Regex(@"(http|https)://[^\s]+|[a-zA-Z]:\\[^\s]+");
-      return urlRegex.Replace(content, match => {
+      return urlRegex.Replace(content, match =>
+      {
          var url = match.Value;
 
-         if (url.Contains("youtube.com/watch?v=") || url.Contains("youtu.be/")) {
+         if (url.Contains("youtube.com/watch?v=") || url.Contains("youtu.be/"))
+         {
             var videoId = ExtractYouTubeId(url);
-            if (videoId != null) {
+            if (videoId != null)
+            {
                return $"<iframe class=\"description-video\" src=\"https://www.youtube.com/embed/{videoId}\" frameborder=\"0\" allowfullscreen></iframe>";
             }
          }
-         else if (Regex.IsMatch(url, @"[a-zA-Z]:\\")) {
-            var webPath = ConvertToWebPath(url);
-            return $"<iframe class=\"description-file\" src=\"{webPath}\" frameborder=\"0\" width=\"100%\" height=\"500\"></iframe>";
+         else if (Regex.IsMatch(url, @"^H:\\"))
+         {
+            if (System.IO.File.Exists(url))
+            {
+               var webPath = ConvertToWebPath(url, "H:/", "/Shared/");
+               return $"<iframe src=\"{webPath}\" frameborder=\"0\" width=\"100%\" height=\"500\"></iframe>";
+            }
+            return $"<span class=\"error-text\">File not found: {url}</span>";
+         }
+         else if (Regex.IsMatch(url, @"^D:\\"))
+         {
+            if (System.IO.File.Exists(url))
+            {
+               var webPath = ConvertToWebPath(url, "D:/", "/Shared/");
+               var fileName = System.IO.Path.GetFileName(url);
+               return $"<a class=\"btn btnWhite bg-btn\" href=\"{webPath}\" download>Download {fileName}</a>";
+            }
+            return $"<span class=\"error-text\">File not found: {url}</span>";
          }
 
          return $"<a class=\"description-link\" href=\"{url}\" target=\"_blank\">{url}</a>";
       });
    }
 
-   private string ConvertToWebPath(string filePath) {
-      var relativePath = filePath.Replace("\\", "/").Replace("H:/", "/Shared/");
-      return relativePath;
+   private string ConvertToWebPath(string filePath, string drivePrefix, string webPrefix)
+   {
+      return filePath.Replace("\\", "/").Replace(drivePrefix, webPrefix);
    }
 
-   private string ExtractYouTubeId(string url) {
+   private string ExtractYouTubeId(string url)
+   {
       var youtubeIdRegex = new Regex(@"(?:https?:\/\/)?(?:www\.)?(?:youtube\.com\/watch\?v=|youtu\.be\/)([a-zA-Z0-9_-]{11})");
       var match = youtubeIdRegex.Match(url);
       return match.Success ? match.Groups[1].Value : null;
    }
 }
+
 
 <div class="panel">
    <div class="body">
