--- a/WCSTrainer/Pages/Lessons/DeleteCategory.cshtml
+++ b/WCSTrainer/Pages/Lessons/DeleteCategory.cshtml
@@ -1,20 +1,20 @@
 ﻿@page
-@model WCSTrainer.Pages.Lessons.DeleteModel
+@model WCSTrainer.Pages.Lessons.DeleteCategoryModel
 
 <div class="panel">
    <div class="body">
       <partial name="_Sidebar" />
       <div class="properties">
          <div class="user-form">
-            <p class="title">Lesson #@Model.Lesson.Id</p>
+            <p class="title">Category #@Model.LessonCategory.Id</p>
             <div class="field-container">
                <div class="text-group">
                   <p class="title">Name</p>
-                  <p class="info">@Model.Lesson.Name</p>
+                  <p class="info">@Model.LessonCategory.Name</p>
                </div>
                <br />
                <form method="post" class="form-group">
-                  <input hidden asp-for="Lesson.Id" />
+                  <input hidden asp-for="LessonCategory.Id" />
                   <input type="submit" value="Delete" class="btn bg-btn btnRed" />
                </form>
             </div>
